--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,20 @@
 [package]
-name = "drive"
-version = "0.0.1"
 authors = ["MaidSafe Developers <dev@maidsafe.net>"]
 description = "This is Pre alpha, and not useful, no code worth looking at."
 documentation = "http://maidsafe.net/drive/latest"
-repository = "https://github.com/maidsafe/drive"
-readme = "README.md"
-license = "GPL-3.0"
 homepage = "http://maidsafe.net"
+license = "GPL-3.0"
+name = "drive"
+readme = "README.md"
+repository = "https://github.com/maidsafe/drive"
+version = "0.0.1"
 
-# until this is updated on crates.io we need to get from git
-#[dependencies.fuse]
-#git="https://github.com/zargony/rust-fuse"
+[dependencies]
+bufstream = "0.1.1"
+byteorder = "0.4.2"
+fuse = "~0.2.7"
+libc = "~0.2.2"
+regex = "0.1.41"
+rustc-serialize = "0.3.16"
+sodiumoxide = "0.0.9"
+time = "~0.1.34"
